--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ plugins:
 # add jekyll-remote-theme to the plugins list.
 
 title: Core Laboratory
-description: This lab was here to test the Core.
+description: This lab is here to test the Core.
 # title: # the title of your site (best without the punctuation dot).
 # description: # a short description of your site's purpose.
