--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ plugins:
 - jekyll-remote-theme
 # add jekyll-remote-theme to the plugins list.
 
-title: Core Laboratory
-description: This lab is made to test the Core.
+title: Core Development
+description: This project is made to test and develop the Core.
 # title: # the title of your site (best without the punctuation dot).
 # description: # a short description of your site's purpose.
 
