--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:
 
 version: '0.0.2'
 
-title: Core Development
+title: CoreDev
 description: This project is made to test and develop the Core.
 # title: # the title of your site (best without the punctuation dot).
 # description: # a short description of your site's purpose.
