--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,9 @@ description: This project is made to test and develop the Core.
 # google_analytics: # your Google Analytics tracking ID.
 # to track your website using Google Analytics.
 
+# cloudflare_analytics: # your Cloudflare Analytics tracking ID.
+# to track your website using Cloudflare Analytics.
+
 # show_downloads: # true or false (unquoted).
 # indicate whether to provide a download URL.
 
