--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-remote_theme: techie-joe/dove
+remote_theme: techie-joe/core
 # the location of the remote_theme.
 
-# plugins:
+# add jekyll-remote-theme to the plugins list.
+plugins:
+- jekyll-remote-theme
 # - jekyll-paginate
 # - jekyll-sitemap
-# - jekyll-remote-theme
-# add jekyll-remote-theme to the plugins list.
 
 version: '0.0.2'
 
