--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-remote_theme: techie-joe/core
+remote_theme: techie-joe/dove
 # the location of the remote_theme.
 
 # add jekyll-remote-theme to the plugins list.
 plugins:
-- jekyll-remote-theme
+# - jekyll-remote-theme
 # - jekyll-paginate
 # - jekyll-sitemap
 
