--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ plugins:
 # - jekyll-sitemap
 
 version: '0.0.2'
+revision: '2511.01'
 
 title: Dove
 description: Dove is a theme development project.
@@ -31,6 +32,10 @@ description: Dove is a theme development project.
 theme_color: '#222'
 color_scheme: light dark
 ghost: bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
+
+# copyright
+author: Techie Joe
+year: 2025
 
 sass:
   style: compressed
