--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ version       : '0.0.3'
 revision      : '2511.03'
 
 title         : Dove
-description   : Dove is a theme development project.
+description   : A theme development project.
 # title       : The title of your site # (best without the punctuation dot).
 # description : Short description of your site's purpose.
 
